[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_kit"
version = "0.0.1"
authors = [
  { name="Benjamin Barber", email="starworks5@gmail.com" },
]
description = "A wrapper around the Go ipfs and ipfs_cluster packages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL License",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://github.com/endomorphosis/ipfs_kit/"
Issues = "https://github.com/endomorphosis/ipfs_kit/issues"